--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "https://api.openai.com/v1/completions",
+    "proxy": "http://localhost:3001",
     "eslintConfig": {
         "extends": [
             "react-app",
